TestRepo2/src/objects/Published_Occasion__c.object
<CustomObject>
    <fields>
        <fullName>Digital_Published_Asset__c</fullName>
        <label>Digital Published Asset</label>
        <referenceTo>Digital_Published_Asset__c</referenceTo>
        <relationshipLabel>Published Occasions</relationshipLabel>
        <relationshipName>Published_Occasions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <referenceTo>Occasion__c</referenceTo>
        <relationshipLabel>Asset - Occasion Use</relationshipLabel>
        <relationshipName>Published_Occasions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Published</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Published Occasion</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Published Occasion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Published Occasions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>